Link to doc and test pages.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <h1 id="project_title">node-cbor</h1>
           <h2 id="project_tagline">Encode and decode CBOR documents, with both easy mode, streaming mode, and SAX-style evented mode.</h2>
 
+            <p><a href="docs/">Documentation</a> <a href="covershot/">Tests</a></p>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/hildjj/node-cbor/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/hildjj/node-cbor/tarball/master">Download this project as a tar.gz file</a>
@@ -35,6 +36,8 @@
 
 <pre><code>$ npm install node-cbor
 </code></pre>
+
+<p>Full <a href='doc/'>documentation</a> available.</p>
 
 <p>From the command line:</p>
 
@@ -142,7 +145,7 @@ $ bin/cbor2diag package.cbor
 <span class="nx">s</span><span class="p">.</span><span class="nx">pipe</span><span class="p">(</span><span class="nx">parser</span><span class="p">);</span>
 </pre></div>
 
-<p>Test coverage is currently above 95%.</p>
+<p><a href='covershot/'>Test coverage</a> is currently above 95%.</p>
       </section>
     </div>
 
@@ -154,7 +157,7 @@ $ bin/cbor2diag package.cbor
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
