Start the name change from node-cbor to cbor.  I've likely missed 12 places.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/hildjj/node-cbor">View on GitHub</a>
 
-          <h1 id="project_title">node-cbor</h1>
+          <h1 id="project_title">cbor</h1>
           <h2 id="project_tagline">Encode and decode CBOR documents, with both easy mode, streaming mode, and SAX-style evented mode.</h2>
 
             <p><a href="docs/">Documentation</a> <a href="covershot/">Tests</a></p>
@@ -34,7 +34,7 @@
       <section id="main_content" class="inner">
         <p>Installation:</p>
 
-<pre><code>$ npm install node-cbor
+<pre><code>$ npm install cbor
 </code></pre>
 
 <p>Full <a href='doc/'>documentation</a> available.</p>
@@ -48,7 +48,7 @@ $ bin/cbor2diag package.cbor
 
 <p>Example:</p>
 
-<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">cbor</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'node-cbor'</span><span class="p">);</span>
+<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">cbor</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'cbor'</span><span class="p">);</span>
 <span class="kd">var</span> <span class="nx">encoded</span> <span class="o">=</span> <span class="nx">cbor</span><span class="p">.</span><span class="nx">encode</span><span class="p">(</span><span class="kc">true</span><span class="p">);</span> <span class="c1">// returns &lt;Buffer d9&gt;</span>
 <span class="nx">cbor</span><span class="p">.</span><span class="nx">decode</span><span class="p">(</span><span class="nx">encoded</span><span class="p">,</span> <span class="kd">function</span><span class="p">(</span><span class="nx">error</span><span class="p">,</span> <span class="nx">obj</span><span class="p">)</span> <span class="p">{</span>
   <span class="c1">// error != null if there was an error</span>
@@ -59,7 +59,7 @@ $ bin/cbor2diag package.cbor
 
 <p>Allows streaming as well:</p>
 
-<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">cbor</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'node-cbor'</span><span class="p">);</span>
+<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">cbor</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'cbor'</span><span class="p">);</span>
 <span class="kd">var</span> <span class="nx">fs</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'fs'</span><span class="p">);</span>
 
 <span class="kd">var</span> <span class="nx">d</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">cbor</span><span class="p">.</span><span class="nx">Decoder</span><span class="p">();</span>
@@ -79,7 +79,7 @@ $ bin/cbor2diag package.cbor
 
 <p>And also a SAX-type mode (which the streaming mode wraps):</p>
 
-<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">cbor</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'node-cbor'</span><span class="p">);</span>
+<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">cbor</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'cbor'</span><span class="p">);</span>
 <span class="kd">var</span> <span class="nx">fs</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'fs'</span><span class="p">);</span>
 
 <span class="kd">var</span> <span class="nx">parser</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">cbor</span><span class="p">.</span><span class="nx">Evented</span><span class="p">();</span>
