--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h1 id="project_title">cbor</h1>
           <h2 id="project_tagline">Encode and decode CBOR documents, with both easy mode, streaming mode, and SAX-style evented mode.</h2>
 
-            <p><a href="docs/">Documentation</a> <a href="covershot/">Tests</a></p>
+            <p><a href="doc/">Documentation</a> <a href="https://coveralls.io/r/hildjj/node-cbor?branch=master">Tests</a></p>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/hildjj/node-cbor/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/hildjj/node-cbor/tarball/master">Download this project as a tar.gz file</a>
@@ -145,7 +145,9 @@ $ bin/cbor2diag package.cbor
 <span class="nx">s</span><span class="p">.</span><span class="nx">pipe</span><span class="p">(</span><span class="nx">parser</span><span class="p">);</span>
 </pre></div>
 
-<p><a href='covershot/'>Test coverage</a> is currently above 95%.</p>
+
+<a href='https://coveralls.io/r/hildjj/node-cbor?branch=master'><img src='https://coveralls.io/repos/hildjj/node-cbor/badge.png?branch=master' alt='Coverage Status' /></a>
+
       </section>
     </div>
 
